--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,61 @@
-name: Node.js CI
+name: Node.js CI/CD
 
-on: [push]  # どのブランチでも、pushされたら実行する
+
+on:
+  push:
+    branches: ["main"]
+
+
+# GitHub Pagesへのデプロイ権限を設定
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+
+# 同時に複数のデプロイが走らないようにする設定
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 
 jobs:
+  # 1. テストとビルド
   build-and-test:
-    runs-on: ubuntu-latest  # GitHubが用意したUbuntu仮想マシンを使う
-
+    runs-on: ubuntu-latest
     steps:
-    - name: ソースコードのチェックアウト
-      uses: actions/checkout@v3
+      - name: ソースコードの取得
+        uses: actions/checkout@v4  # v4に変更
 
-    - name: Node.jsのセットアップ
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
 
-    - name: ライブラリのインストール
-      run: npm install
+      - name: Node.jsのセットアップ
+        uses: actions/setup-node@v4  # v4に変更
+        with:
+          node-version: '18'
 
-    - name: 構文チェック (Lint)
-      run: npm run lint
 
-    - name: 単体テスト (Test)
-      run: npm run test
+      - name: ライブラリのインストール
+        run: npm install
+
+
+      - name: テストの実行
+        run: npm run test
+
+
+      - name: GitHub Pages用ファイルのアップロード
+        uses: actions/upload-pages-artifact@v3 # v3に変更 (重要)
+        with:
+          path: '.'
+
+
+  # 2. デプロイ（ビルド成功時のみ動く）
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+      - name: GitHub Pagesへデプロイ
+        id: deployment
+        uses: actions/deploy-pages@v4 # v4に変更 (重要)
